idf_component_register(SRCS "DisplayMode.cpp" "main.cpp"
    "Adc.cpp"
    # "AM2320.cpp"
    "Button.cpp"
    "Component.cpp"
    "DisplayMode.cpp"
    #"I2C.cpp"
    "ISRServiceable.cpp"
    "Led.cpp"
    "MainDisplayMode.cpp"
    #"LiquidCrystal_I2C.cpp"
    #"Print.cpp"
    "Thermistor.cpp"
    INCLUDE_DIRS ".")
